# sidebar_tui

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  build.rs  eventual_objectives.md  install.sh  objectives.md  package-lock.json  package.json  progress.md  scratchpad.md  test_persist_35.txt
.beads/: beads.db  beads.db-shm  beads.db-wal  daemon-error  issues.jsonl  last-touched
.claude/agents/: kang-developer.md  kang-orchestrator.md  kang-planner.md  kang-realigner.md  kang-researcher.md  kang-reviewer.md  kang-verifier.md
.claude/skills/: tui-debugging.skill
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
.mulch/: mulch.config.yaml
.mulch/expertise/: terminal.jsonl
aur/: .SRCINFO  PKGBUILD
docs/: demo.tape  index.md
docs/.vitepress/: config.ts
docs/guide/: index.md  installation.md  keybindings.md  workspaces.md
docs/public/: install.sh
examples/: color_test.rs
homebrew/Formula/: sb.rb
npm/sidebar-tui-darwin-arm64/: package.json
npm/sidebar-tui-darwin-x64/: package.json
npm/sidebar-tui-linux-arm64/: package.json
npm/sidebar-tui-linux-x64/: package.json
npm/sidebar-tui-win32-x64/: package.json
progress_doc_backups/: progress_at_1771110660396.md  progress_at_1771176690000.md  progress_at_17712863343N.md  progress_at_1771298758250.md
references/: separate_sockets_spike.md
scripts/: release.sh
src/: colors.rs  daemon.rs  env_capture.rs  hint_bar.rs  input.rs  input_handler.rs  lib.rs  main.rs  name_generator.rs  pty.rs  sidebar.rs  state.rs  terminal.rs  updater.rs
tests/: scaffold_tests.rs
tests/e2e/: mod.rs
(+14 files in other folders)
