[package]
name = "sidebar-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sb"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
portable-pty = "0.9"
anyhow = "1.0"
vt100 = "0.15"

[dev-dependencies]
expectrl = "0.8"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"
