[package]
name = "sidebar-tui"
version = "0.1.10"
edition = "2024"

[lib]
name = "sidebar_tui"
path = "src/lib.rs"

[[bin]]
name = "sb"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
portable-pty = "0.9"
anyhow = "1.0"
vt100 = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
dirs = "5"
rand = "0.8"
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2", "rustls"], default-features = false }
ureq = { version = "2", features = ["json"], default-features = false }

[dev-dependencies]
expectrl = "0.8"
serial_test = "3"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"
